# GrokSearch-rs

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: bump.yml  release.yml
crates/grok-search-academic/: Cargo.toml
crates/grok-search-academic/src/: institutional.rs  lib.rs  providers.rs  service.rs
crates/grok-search-academic/src/llm_artifacts/: artifact_writer.rs  mod.rs  prompt.rs
crates/grok-search-academic/src/llm_progressive/: assemble.rs  cache.rs  chunking.rs  mod.rs  prompt.rs  schema.rs
crates/grok-search-academic/src/providers/: arxiv.rs  crossref.rs  dblp.rs  http.rs  openalex.rs  rate_limit.rs  scihub.rs  semantic.rs  unpaywall.rs
crates/grok-search-academic/src/service/: identifiers.rs  materials.rs  pdf.rs  ranking.rs  search_options.rs  structure.rs  tests.rs
crates/grok-search-apps/: Cargo.toml
crates/grok-search-apps/src/: lib.rs  mcp_service.rs
crates/grok-search-audit/: Cargo.toml
crates/grok-search-audit/src/: lib.rs
crates/grok-search-auth/: Cargo.toml
crates/grok-search-auth/src/: credentials.rs  lib.rs
crates/grok-search-auth/src/oauth/: login.rs  token_store.rs
crates/grok-search-cache/: Cargo.toml
crates/grok-search-cache/src/: lib.rs
crates/grok-search-cli/: Cargo.toml
crates/grok-search-cli/src/: auth.rs  dispatch.rs  lib.rs  logging.rs  mcp.rs  output.rs  service.rs
crates/grok-search-cli/src/args/: academic.rs  mod.rs  tests.rs
crates/grok-search-config/: Cargo.toml
crates/grok-search-config/src/: diagnostics.rs  docs.rs  lib.rs  loader.rs  model.rs  paths.rs  reader.rs  schema.rs  template.rs  util.rs
crates/grok-search-config/tests/: config.rs
crates/grok-search-content/: Cargo.toml
crates/grok-search-content/src/: artifact.rs  lib.rs  parser.rs  text.rs
crates/grok-search-llm/: Cargo.toml
crates/grok-search-llm/src/: anthropic.rs  client.rs  lib.rs  openai.rs  protocol.rs
crates/grok-search-llm/tests/: minimax_live.rs
crates/grok-search-mcp/: Cargo.toml
crates/grok-search-mcp/src/: convert.rs  handler.rs  http.rs  lib.rs  security.rs  stdio.rs  tests.rs
crates/grok-search-net/: Cargo.toml
crates/grok-search-net/src/: http.rs  key_pool.rs  lib.rs  proxy.rs  url_policy.rs
crates/grok-search-parse/: Cargo.toml
crates/grok-search-parse/src/: lib.rs
crates/grok-search-pdf/: Cargo.toml
crates/grok-search-pdf/src/: artifacts.rs  download.rs  lib.rs  parse.rs  text.rs  validation.rs  vision.rs
crates/grok-search-pdf/src/artifacts/: filters.rs  images.rs  manifest.rs  markdown_table.rs  quality.rs  tables.rs
crates/grok-search-provider-core/: Cargo.toml
crates/grok-search-provider-core/src/: lib.rs
crates/grok-search-providers/: Cargo.toml
crates/grok-search-providers/src/: lib.rs
crates/grok-search-providers/src/adapters/: chat_completions_request.rs  chat_completions_response.rs  grok_responses_request.rs  grok_responses_response.rs  mod.rs  sources.rs
crates/grok-search-providers/src/providers/: firecrawl.rs  grok.rs  mod.rs  openai_compatible.rs  tavily.rs  wechat.rs  zhihu.rs
crates/grok-search-providers/tests/: adapter_grok_responses.rs  firecrawl_rotation.rs  integration_compat.rs  openai_compatible_adapter.rs  sse_bug_repro.rs  tavily_parse.rs  tavily_rotation.rs
crates/grok-search-rs/: Cargo.toml
crates/grok-search-rs/src/: main.rs
crates/grok-search-runtime/: Cargo.toml
crates/grok-search-runtime/src/: lib.rs
crates/grok-search-runtime/tests/: integration_service.rs
crates/grok-search-service/: Cargo.toml
crates/grok-search-service/src/: cache.rs  diagnostics.rs  domain_filter.rs  enrichment.rs  fetch.rs  lib.rs  logging.rs  repo_metadata.rs  response_budget.rs  service.rs  service_tests.rs
crates/grok-search-service/src/service/: factory.rs  probe.rs  tools.rs  web.rs
crates/grok-search-service/tests/: integration_service.rs  logging.rs  response_budget.rs  service_contract.rs
crates/grok-search-source-core/: Cargo.toml
crates/grok-search-source-core/src/: lib.rs
crates/grok-search-sources/: Cargo.toml
crates/grok-search-sources/src/sources/: arxiv.rs  github.rs  huggingface.rs  mod.rs  stackexchange.rs  wikipedia.rs
crates/grok-search-sources/tests/: sources_render.rs
crates/grok-search-sources/tests/fixtures/sources/: stackexchange.json
crates/grok-search-tools/: Cargo.toml
crates/grok-search-tools/spec/: tools.json
crates/grok-search-tools/src/: invoke.rs  lib.rs  registry.rs  tests.rs  validation.rs
crates/grok-search-tools/src/params/: academic.rs  diagnostics.rs  mod.rs  repo.rs  social.rs  web.rs
crates/grok-search-types/: Cargo.toml
crates/grok-search-types/src/: error.rs  lib.rs
crates/grok-search-types/src/model/: academic.rs  mod.rs  search.rs  source.rs  tool.rs
crates/grok-search-types/tests/: source_merge.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  TESTING.md
npm/grok-search-rs/: README.md  package.json
python/: README.md  pyproject.toml  setup.py
python/grok_search_rs/: __init__.py  cli.py
scripts/: build-linux-release.sh  bump-version.sh  check-workspace.sh  install-skills.sh  package-skills.sh  release-via-workflows.ps1
skills/grok-search-academic-literature/: SKILL.md
skills/grok-search-academic-literature/agents/: openai.yaml
skills/grok-search-academic-literature/references/: examples.md
skills/grok-search-diagnostics/: SKILL.md
skills/grok-search-diagnostics/agents/: openai.yaml
skills/grok-search-diagnostics/references/: examples.md
skills/grok-search-repo-intelligence/: SKILL.md
skills/grok-search-repo-intelligence/agents/: openai.yaml
skills/grok-search-repo-intelligence/references/: examples.md
skills/grok-search-social-search/: SKILL.md
skills/grok-search-web-research/: SKILL.md
src/: config.rs  lib.rs  main.rs  mcp.rs  proxy.rs  service.rs
src/providers/: firecrawl.rs  http.rs  key_pool.rs  mod.rs  tavily.rs
src/sources/: arxiv.rs  github.rs  mod.rs  stackexchange.rs  wikipedia.rs
tests/: config.rs  firecrawl_rotation.rs  service_contract.rs  sources_render.rs  sse_bug_repro.rs
(+4 files in other folders)
