[workspace]
members = [
    "crates/grok-search-academic",
    "crates/grok-search-auth",
    "crates/grok-search-config",
    "crates/grok-search-content",
    "crates/grok-search-mcp",
    "crates/grok-search-net",
    "crates/grok-search-parse",
    "crates/grok-search-provider-core",
    "crates/grok-search-providers",
    "crates/grok-search-rs",
    "crates/grok-search-service",
    "crates/grok-search-source-core",
    "crates/grok-search-sources",
    "crates/grok-search-types",
]
default-members = ["crates/grok-search-rs"]
resolver = "2"

[workspace.package]
version = "0.1.21"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/MosRat/GrokSearch-rs"
homepage = "https://github.com/MosRat/GrokSearch-rs"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
getrandom = "0.3"
lru = "0.12"
percent-encoding = "2"
quick-xml = { version = "0.37", default-features = false, features = ["encoding"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "socks"], default-features = false }
rmcp = { version = "0.8", features = ["server", "transport-io"] }
ring = "0.17"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt", "sync", "time"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
pdf_oxide = "0.3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
