[workspace]
members = [
    "crates/grok-search-academic",
    "crates/grok-search-apps",
    "crates/grok-search-audit",
    "crates/grok-search-auth",
    "crates/grok-search-cache",
    "crates/grok-search-cli",
    "crates/grok-search-config",
    "crates/grok-search-content",
    "crates/grok-search-llm",
    "crates/grok-search-mcp",
    "crates/grok-search-net",
    "crates/grok-search-parse",
    "crates/grok-search-pdf",
    "crates/grok-search-provider-core",
    "crates/grok-search-providers",
    "crates/grok-search-runtime",
    "crates/grok-search-rs",
    "crates/grok-search-service",
    "crates/grok-search-source-core",
    "crates/grok-search-sources",
    "crates/grok-search-tools",
    "crates/grok-search-types",
]
default-members = ["crates/grok-search-rs"]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/MosRat/GrokSearch-rs"
homepage = "https://github.com/MosRat/GrokSearch-rs"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
lru = "0.12"
mimalloc = { version = "0.1", default-features = false }
percent-encoding = "2"
quick-xml = { version = "0.37", default-features = false, features = ["encoding"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "socks", "cookies"], default-features = false }
redb = "2"
rmcp = { version = "2", features = ["server", "transport-io", "transport-streamable-http-server"] }
ring = "0.17"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
scraper = "0.23"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
pdf_oxide = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
