[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grok-search-rs"
version = "0.1.25"
description = "Rust MCP server for Grok web search and Tavily-backed source retrieval"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "MosRat" }]
keywords = ["mcp", "grok", "tavily", "firecrawl", "search", "rust", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/MosRat/GrokSearch-rs"
Repository = "https://github.com/MosRat/GrokSearch-rs"
Issues = "https://github.com/MosRat/GrokSearch-rs/issues"

[project.scripts]
grok-search-rs = "grok_search_rs.cli:main"

[tool.setuptools]
packages = ["grok_search_rs", "grok_search_rs.bin"]

[tool.setuptools.package-data]
"grok_search_rs.bin" = ["grok-search-rs*"]
