[package]
name = "grok-search-academic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Academic search providers for GrokSearch-rs"

[dependencies]
async-trait.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
grok-search-config = { path = "../grok-search-config" }
grok-search-net = { path = "../grok-search-net" }
grok-search-parse = { path = "../grok-search-parse" }
grok-search-pdf = { path = "../grok-search-pdf" }
grok-search-provider-core = { path = "../grok-search-provider-core" }
grok-search-types = { path = "../grok-search-types" }
