[package]
name = "grok-search-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Audit recording and query support for GrokSearch-rs"

[dependencies]
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tempfile.workspace = true
