[package]
name = "grok-search-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authentication support for GrokSearch-rs"

[dependencies]
async-trait.workspace = true
base64.workspace = true
getrandom.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tempfile.workspace = true
