[package]
name = "grok-search-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Persistent cache helpers for GrokSearch-rs"

[dependencies]
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tempfile.workspace = true
