[package]
name = "grok-search-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration loading for GrokSearch-rs"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tempfile.workspace = true
