[package]
name = "grok-search-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared generic content parsing helpers for GrokSearch-rs"

[dependencies]
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tempfile.workspace = true
