[package]
name = "grok-search-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tokio.workspace = true
