[package]
name = "grok-search-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP server adapter for GrokSearch-rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
rmcp.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
grok-search-audit = { path = "../grok-search-audit" }
grok-search-service = { path = "../grok-search-service" }
grok-search-tools = { path = "../grok-search-tools" }
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
reqwest.workspace = true
