[package]
name = "grok-search-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PDF download, validation, parsing, and artifact helpers for GrokSearch-rs"

[dependencies]
pdf_oxide.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
grok-search-content = { path = "../grok-search-content" }
grok-search-net = { path = "../grok-search-net" }
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tokio.workspace = true

