[package]
name = "grok-search-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Application orchestration for GrokSearch-rs"

[dependencies]
async-trait.workspace = true
lru.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
grok-search-auth = { path = "../grok-search-auth" }
grok-search-academic = { path = "../grok-search-academic" }
grok-search-config = { path = "../grok-search-config" }
grok-search-net = { path = "../grok-search-net" }
grok-search-provider-core = { path = "../grok-search-provider-core" }
grok-search-providers = { path = "../grok-search-providers" }
grok-search-source-core = { path = "../grok-search-source-core" }
grok-search-sources = { path = "../grok-search-sources" }
grok-search-types = { path = "../grok-search-types" }
