[package]
name = "grok-search-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Specialist source extractors for GrokSearch-rs"

[dependencies]
async-trait.workspace = true
base64.workspace = true
percent-encoding.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
grok-search-config = { path = "../grok-search-config" }
grok-search-source-core = { path = "../grok-search-source-core" }
grok-search-types = { path = "../grok-search-types" }
