[package]
name = "grok-search-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared tool schemas and dispatch for GrokSearch-rs"

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
grok-search-service = { path = "../grok-search-service" }
grok-search-types = { path = "../grok-search-types" }

[dev-dependencies]
tokio.workspace = true
