[package]
name = "grok-search-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types and errors for GrokSearch-rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
